<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Football Championship Creator</string>
    <string name="dummy_button">Continue</string>
    <string name="dummy_content"></string>
    <string name="title_activity_main">Home</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="current_champ">Current Championships</string>
    <string name="new_champ">New Championship</string>
    <string name="create_champ">Create New Championship</string>
    <string name="title_activity_new_champ">New Championship</string>
    <string name="champ_name">Championship Name</string>
    <string name="numofteams">Number of Teams</string>
    <string name="champ_type">Championship Type</string>
    <string name="radio_groups">Groups</string>
    <string name="teams">Teams</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="radio_playoffs">Playoffs</string>
    <string name="menu_submit">Submit</string>
    <string name="numof_teams_per_group">Number of Teams per Group</string>
    <string name="add_group">Add Group</string>
    <string name="max_teams">Max Number of Teams</string>
    <string name="group_name">Group Name</string>
    <string name="count">No</string>
    <string name="add_team">Add Team</string>
    <string name="team_name">Team Name</string>
    <string name="group_list">Group List</string>
    <string name="max_players">Max Num of Players</string>
    <string name="next">Next</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish">Finish</string>
    <string name="title_activity_team_dashboard">Team Dashboard</string>
    <string name="position">Position</string>
    <string name="name">Name</string>
    <string name="number">Player Number</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="add_player">Add Player</string>
    <string name="confirm_delete">Are you sure you want to delete this championship?</string>
</resources>