<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/soccerbg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_newchamp_name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/champ_name"
            android:gravity="center"
            android:background="@drawable/border1"
            android:textSize="@dimen/text_size_1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_newchamp_name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:textColor="@color/color_edit_1"
            android:textSize="@dimen/text_size_1" />
    </LinearLayout>



    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:weightSum="2" >

        <TextView
            android:id="@+id/tv_champ_type"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/champ_type"
            android:gravity="center"
            android:background="@drawable/border1"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_champtype"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <RadioButton
                android:id="@+id/radio_groups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_groups"
                android:textColor="@color/color_edit_1"
                android:textSize="@dimen/text_size_1" />

            <RadioButton
                android:id="@+id/radio_playoffs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_playoffs"
                android:textColor="@color/color_edit_1"
                android:textSize="@dimen/text_size_1" />
        </RadioGroup>


    </LinearLayout>

</LinearLayout>