<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmatches" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layout_group_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:weightSum="3"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_position"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border2"
                android:gravity="center"
                android:text="@string/position"
                android:textSize="@dimen/text_size_1"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_position"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_1"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:weightSum="3"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_player_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border2"
                android:gravity="center"
                android:text="@string/name"
                android:textSize="@dimen/text_size_1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_player_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="text"
                android:textColor="@color/color_edit_1"
                android:textSize="@dimen/text_size_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:weightSum="3"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_player_number"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border2"
                android:gravity="center"
                android:text="@string/number"
                android:textSize="@dimen/text_size_1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_player_number"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number"
                android:textColor="@color/color_edit_1"
                android:textSize="@dimen/text_size_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:weightSum="3"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border2"
                android:gravity="center"
                android:text="@string/phone"
                android:textSize="@dimen/text_size_1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="phone"
                android:textColor="@color/color_edit_1"
                android:textSize="@dimen/text_size_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:weightSum="3"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border2"
                android:gravity="center"
                android:text="@string/email"
                android:textSize="@dimen/text_size_1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="textEmailAddress"
                android:textColor="@color/color_edit_1"
                android:textSize="@dimen/text_size_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_addPlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawableRight="@drawable/plus1"
                android:text="@string/add_player"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/table_players"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:shrinkColumns="*"
            android:stretchColumns="*" >
           
        </TableLayout>
    </LinearLayout>

</ScrollView>