<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/create_groups_teams"
    android:orientation="vertical" >


    <LinearLayout
        android:id="@+id/layout_group_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_group_name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/group_name"
            android:background="@drawable/border1"
            android:gravity="center"
            android:textSize="@dimen/text_size_1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_group_name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:textColor="@color/color_edit_1"
            android:textSize="@dimen/text_size_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_addgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/plus1"
            android:text="@string/add_group"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/table_groups"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRowHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvCount"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/count"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>

            <TextView
                android:id="@+id/tvGroupName"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/group_name"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>


        </TableRow>
    </TableLayout>

</LinearLayout>